# jfrog-conan-samples

./: .gitignore  README.md
ci/jenkins/: Dockerfile  README.md  ingress.yml
ci/jenkins/helm/: custom-values.yaml
libraries/custom/hellopkg/: CMakeLists.txt  README.md  conanfile.py
libraries/custom/hellopkg/pipelines/: build-and-upload.sh  jenkins-pipeline.dsl
libraries/custom/hellopkg/src/: hellopkg.cpp  hellopkg.h
libraries/custom/hellopkg/test_package/: CMakeLists.txt  conanfile.py
libraries/custom/hellopkg/test_package/src/: example.cpp
libraries/poco/md5/pipelines/: build-and-upload.sh  jenkins-pipeline.dsl  qa-and-promote.sh
